@@ -1,3 +1,5 @@
+- urpmi.addmedia:
+  o do not pick rsync medium if rsync is not installed (mga#3557)
 - urpmi.update:
   o document that -a only works on enabled media (mga#3190)
 
